log/build_2024-02-05_21-40-19/my_py_pkg/stderr.log
  File "/home/sambhav/ros2_ws/install/my_py_pkg/lib/python3.10/site-packages/my_py_pkg/number_counter.py", line 1
    ]#!/usr/bin/env python3
    ^
SyntaxError: unmatched ']'

